[project]
name = "mamba-procs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mamba-ssm>=2.3.2.post1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]
